# opjax

./: .env.example  .gitignore  .gitmodules  JOURNAL.md  composer2.md  opjax.md  pyproject.toml  refs.md
docs/: design-notes.md
docs/model-factory/: BLOCKED-axport-ingress.md  CHANGELOG.md  GUIDE.md  README.md
docs/model-factory/00-governance/: WHAT-UPLOAD-APPROVED-MEANS.md  pre-upload-gate.md  provider-retention.md  rights-manifest.example.json  rights-manifest.json  rights-manifest.template.md  spend-caps.md  spend-ledger.example.json
docs/model-factory/01-claim/: hypothesis.md  stats-design.md
docs/model-factory/02-sealed-eval/: deepswe-policy.md  protocol.md
docs/model-factory/03-tournament/: base-tournament.md  decision.md
docs/model-factory/04-data-factory/: pipeline.md  (+2 more)
docs/notes/: 0001-phase1-foundation.md  0002-modal-gpu.md  0003-modal-reproducibility.md  0004-hf-gemma4-access.md  0005-model-factory-bootstrap.md
inference/: .gitignore  LOCAL_ONLY.md  astro.config.mjs  package.json  pnpm-lock.yaml
inference/scripts/: extract_pdf.py
ptb/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
ptb/scripts/: sync-chapters.mjs
references/factory/: README.md
references/model-factory/: INDEX.md  baseten.md  composer-swe-fusion.md  deepswe.md  inkling-tinker.md  laguna.md  opd.md  prime.md  ramp.md
scripts/: build_axport_slice.py  env_update.sh  setup_cloud.sh  smoke_cloud_toolchain.sh
src/opjax/: __init__.py  actions.py  cli.py
tests/: test_actions.py  test_dataset_builder.py  test_isft_loop.py  test_model_factory_canary_gate.py  test_model_factory_curate.py  test_model_factory_scrub.py  test_model_factory_splits_audit.py  test_model_factory_stage6.py  test_real_isft_pipeline.py  test_synthetic_click.py
tests/factory/: test_markdown_export.py  test_normalize_rights_preflight.py  test_scrub.py
(+165 files in other folders)
